# TF2SentryEE

./: .gitignore  pyproject.toml  readme.md  requirements.txt
Documentation/1-TurretGuts/PCB/: FT232H-with-C.md
Documentation/1-TurretGuts/PCB/Turret/: PerformanceRequirements.txt
Documentation/2-WranglerGuts/PCB/: PCBDocumentation.md  TurretDocumentation.md
TurretSRC/: test_main.py
TurretSRC/CVImplementations/: default_analyzer.py  oakd_detector.py  opencv_classical_detector.py  opencv_detector.py  opencv_dnn_detector.py  opencv_tracker.py  ultralytics_yolo_detector.py
TurretSRC/FT232HCode/: firingcontrollerft232h.py  motorcontrollerft232h.py  peripheralcontrollerft232h.py  soundcontrollerft232h.py  wranglercontrollerft232h.py
TurretSRC/FT232HCode/Camera/: arducam.py  defaultcamera.py
TurretSRC/RaspberryCode/Camera/: picamera.py
TurretSRC/RuntimeConfigs/Analyzers/: double_detector.py
TurretSRC/RuntimeConfigs/DepthVision/: makeshift_stereo.py  oak_d_graph.py  oak_d_node.py  oak_d_pipeline_component.py  oak_d_stereo_camera_config.py
TurretSRC/RuntimeConfigs/Detectors/: google_coral.py  oak_d.py  ultralytics_converter.py
TurretSRC/RuntimeConfigs/IOConfigs/: blank.py  ft232h.py
TurretSRC/RuntimeConfigs/Trackers/: tracker_configurable.py
TurretSRC/StereoCameras/: helper_functions.py  makeshift_stereo_camera.py  oak_d_pipeline_component.py  oak_d_stereo_camera.py  opencv_stereo_matcher.py  stereo_bm.py  stereo_matcher.py
TurretSRC/StereoCameras/StereoCalibration/: dpg_gui.py  stereo_bm_calibrator.py  stereo_calibrate.py  stereo_matcher_calibrator.py
(+39 files in other folders)
