[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["TurretSRC"]

[project]
name = "IOImplementations"
version = "0.1.0"
description = "The concrete implementations for the TF2 Sentry"
readme = "readme.md"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Private :: Do Not Upload"
]

license = "AGPL-3.0-only"

dependencies = [
     "adafruit-blinka==8.46.1",
     "adafruit-circuitpython-motor==3.4.17",
     "adafruit-circuitpython-pca9685==3.4.19",
     "dearpygui==2.1.0",
     "depthai==2.30.0.0",
     "graphlib-backport==1.1.0; python_version<'3.9'",
     "opencv-contrib-python==4.9.0.80",
     "opencv-python==4.9.0.80",
     "playsound3==3.2.4",
     "pyftdi==0.55.4",
     "pyusb==1.2.1",
     "scipy==1.13.1",
     "tqdm==4.67.1",
     "ultralytics==8.3.163"
]